# stm32-app

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  my-linker-script.ld  stm32l4xx_hal_conf.h
src/: CMakeLists.txt
src/gpio/: CMakeLists.txt
src/gpio/include/: gpio.h
src/interrupt/: CMakeLists.txt
src/interrupt/include/: interrupt.h
src/module1/: CMakeLists.txt  module1.cpp
src/module1/include/: module1.h
